kubernetes/apps/monitoring/grafana/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - grafana.iacob.uk
  rules:
    - backendRefs:
        - name: prometheus-grafana
          port: 80
